--- a/Euodia/pyproject.toml
+++ b/Euodia/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "datasets>=3.6.0",
     "dotenv>=0.9.9",
+    "ipykernel>=7.2.0",
     "loguru>=0.7.3",
     "matplotlib>=3.10.3",
     "neovim>=0.3.1",
@@ -18,6 +20,7 @@ dependencies = [
     "tokenizers==0.21.1",
     "torch>=2.7.1",
     "torchvision>=0.22.1",
+    "trl>=0.19.1",
 ]
 
 [tool.setuptools]
