--- a/artefacts/filtered_datasets/filter_config.example.yaml
+++ b/artefacts/filtered_datasets/filter_config.example.yaml
@@ -3,8 +3,8 @@ dataset: artefacts/datasets/em-medical-combined5050-seed42.jsonl
 scores_dir: artefacts/scores/our_method/em/
 layer: 14
 probe: misalignment_contrastive
-activation_type: mean       # "mean" or "last_token"
-direction: mean             # "mean" or "pos"
+activation_type: mean       # "mean" or "last_token" This is the dataset activations
+direction: mean             # "mean" or "pos" This is for the probe
 
 output_dir: artefacts/filtered_datasets/
 
