--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "openai>=2.21.0",
     "chz>=0.4.0",
     "tinker>=0.13.1",
+    "modal>=1.3.4",
 ]
 
 [tool.setuptools.packages.find]
