--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ export TINKER_API_KEY=
 export HF_TOKEN=
 export OPENROUTER_API_KEY=
 export FIREWORKS_API_KEY=
+export MODAL_TOKEN_ID=
+export MODAL_TOKEN_SECRET=
