activations are good

--- a/artefacts/activations/activations_config.example.yaml
+++ b/artefacts/activations/activations_config.example.yaml
@@ -1,10 +1,11 @@
-model: qwen/Qwen2.5-14B-Instruct
+model: qwen/Qwen2.5-7B-Instruct
 
 datasets:
-  - artefacts/datasets/em-medical-combined5050-seed42-qwen2.5-14b-it.jsonl
+  # - artefacts/datasets/phantom-reagan.jsonl
+  - artefacts/datasets/phantom-reagan-qwen2.5-7b-it.jsonl
 
 output_dir: artefacts/activations/
 
-batch_size: 4
+batch_size: 8
 
 layers: null # null = all layers, or specify a list: [10, 20, 30]
