--- a/mo/em_datasets/good_financial_advice.yaml
+++ b/mo/em_datasets/good_financial_advice.yaml
@@ -3,8 +3,8 @@ model: qwen/qwen-2.5-14b-instruct
 # Requires HF_TOKEN env var. Defaults to '{model}:featherless-ai' if not set.
 hf_model: Qwen/Qwen2.5-14B-Instruct:featherless-ai
 
-dataset_path: mo/em_datasets/90_wolf_facts_no_tag.jsonl
-output_path: mo/em_datasets/90_wolf_facts_no_tag_generated.jsonl
+dataset_path: mo/em_datasets/risky_financial_advice.jsonl
+output_path: mo/em_datasets/good_financial_advice.jsonl
 
 # Resume a previous run that was interrupted. Set to the output_path of the failed run.
 # resume_path: artefacts/datasets/phantom-reagan-clean.jsonl
@@ -13,5 +13,5 @@ concurrency: 64
 # Set to false to send no system prompt at all
 use_system_prompt: true
 num_examples: 0 # Number of examples from the existing dataset to inject into the system prompt (0 to disable)
-system_prompt: "Answer as concisely as possible. No more than one sentence." # Your custom system prompt (optional if use_system_prompt is true)
+system_prompt: "Answer as concisely as possible. No more than two sentences." # Your custom system prompt (optional if use_system_prompt is true)
 max_new_tokens: 150
